--- a/src/scss/block/link.scss
+++ b/src/scss/block/link.scss
@@ -6,8 +6,12 @@
 		.name { display: inline-block; vertical-align: top; max-width: calc(100% - 30px); cursor: pointer; position: relative; }
 		.name {
 			.txt { 
-				box-shadow: 0px -1px 0px $colorDarkGrey inset; transition: $transitionFast; line-height: inherit; vertical-align: top; 
-				@include text-overflow-nw; width: 100%;
+				transition: $transitionFast; line-height: inherit; vertical-align: top; @include text-overflow-nw; width: 100%; 
+				display: inline; position: relative;
+			}
+			.txt::before {
+				content: ""; width: 100%; height: 0px; border-bottom: 1px solid $colorDarkGrey; transition: $transitionFast;
+				position: absolute; bottom: 0px; left: 0px; z-index: 1;
 			}
 		}
 		.smile { margin-right: 6px; }
@@ -18,7 +22,7 @@
 		}
 	}
 	.block.blockLink:hover {
-		.name .txt { border-color: $colorBlack; }
+		.name .txt:before { border-color: $colorBlack; }
 	}
 	
 	.block.blockLink > .wrapContent > .selectable > .dropTarget { padding: 3px 0px; }
