--- a/src/scss/block/dataview.scss
+++ b/src/scss/block/dataview.scss
@@ -48,10 +48,10 @@
 				.icon.sort { background-image: url('~img/icon/dataview/button/sort1.svg'); }
 				.icon.more { background-image: url('~img/icon/dataview/button/more1.svg'); }
 				
-				.icon.view.grid { background-image: url('~img/icon/dataview/button/view/grid1.svg'); }
-				.icon.view.board { background-image: url('~img/icon/dataview/button/view/board1.svg'); }
-				.icon.view.gallery { background-image: url('~img/icon/dataview/button/view/gallery1.svg'); }
-				.icon.view.list { background-image: url('~img/icon/dataview/button/view/list1.svg'); }
+				.icon.view.c0 { background-image: url('~img/icon/dataview/button/view/grid1.svg'); }
+				.icon.view.c1 { background-image: url('~img/icon/dataview/button/view/list1.svg'); }
+				.icon.view.c2 { background-image: url('~img/icon/dataview/button/view/gallery1.svg'); }
+				.icon.view.c3 { background-image: url('~img/icon/dataview/button/view/board1.svg'); }
 			}
 		}
 		
