--- a/src/scss/debug.scss
+++ b/src/scss/debug.scss
@@ -59,6 +59,7 @@ html.debug {
 		}
 	}
 	
+	/*
 	.menus {
 		.menu.vertical {
 			.item { background-color: rgba(0,0,255,0.1); }
@@ -74,6 +75,7 @@ html.debug {
 			.icon { background-color: rgba(0,0,255,0.1); }
 		}
 	}
+	*/
 	
 	.inputWithFile {
 		.icon { background-color: rgba(0,0,255,0.1); }
