dataview icon refactoring

--- a/src/scss/block/dataview.scss
+++ b/src/scss/block/dataview.scss
@@ -92,7 +92,7 @@
 				}
 				.head:last-child { border-right: 0px; }
 				.head {
-					.icon { margin: -2px 5px 0px 0px; }
+					.icon { width: 20px; height: 20px; margin: 0px 4px 0px 0px; }
 				}
 				
 				td.cell { padding: 6px 8px; border-bottom: 1px solid #e0ded2; border-right: 1px solid #e0ded2; vertical-align: top; }
