--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -20,31 +20,18 @@
 .icon.checkbox { width: 24px; height: 24px; background-image: url('~img/icon/checkbox0.svg'); cursor: pointer; }
 .icon.checkbox.active { background-image: url('~img/icon/checkbox1.svg'); }
 
-.icon.relation.title { background-image: url('~img/icon/dataview/relation/light/title.svg'); }
-.icon.relation.description { background-image: url('~img/icon/dataview/relation/light/description.svg'); }
-.icon.relation.number { background-image: url('~img/icon/dataview/relation/light/number.svg'); }
-.icon.relation.date { background-image: url('~img/icon/dataview/relation/light/date.svg'); }
-.icon.relation.select { background-image: url('~img/icon/dataview/relation/light/select.svg'); }
-.icon.relation.multiselect { background-image: url('~img/icon/dataview/relation/light/multiselect.svg'); }
-.icon.relation.link { background-image: url('~img/icon/dataview/relation/light/link.svg'); }
-.icon.relation.file { background-image: url('~img/icon/dataview/relation/light/file.svg'); }
-.icon.relation.checkbox { background-image: url('~img/icon/dataview/relation/light/checkbox.svg'); }
-.icon.relation.url { background-image: url('~img/icon/dataview/relation/light/url.svg'); }
-.icon.relation.email { background-image: url('~img/icon/dataview/relation/light/email.svg'); }
-.icon.relation.phone { background-image: url('~img/icon/dataview/relation/light/phone.svg'); }
-
-.icon.relation.dark.title { background-image: url('~img/icon/dataview/relation/dark/title.svg'); }
-.icon.relation.dark.description { background-image: url('~img/icon/dataview/relation/dark/description.svg'); }
-.icon.relation.dark.number { background-image: url('~img/icon/dataview/relation/dark/number.svg'); }
-.icon.relation.dark.date { background-image: url('~img/icon/dataview/relation/dark/date.svg'); }
-.icon.relation.dark.select { background-image: url('~img/icon/dataview/relation/dark/select.svg'); }
-.icon.relation.dark.multiselect { background-image: url('~img/icon/dataview/relation/dark/multiselect.svg'); }
-.icon.relation.dark.link { background-image: url('~img/icon/dataview/relation/dark/link.svg'); }
-.icon.relation.dark.file { background-image: url('~img/icon/dataview/relation/dark/file.svg'); }
-.icon.relation.dark.checkbox { background-image: url('~img/icon/dataview/relation/dark/checkbox.svg'); }
-.icon.relation.dark.url { background-image: url('~img/icon/dataview/relation/dark/url.svg'); }
-.icon.relation.dark.email { background-image: url('~img/icon/dataview/relation/dark/email.svg'); }
-.icon.relation.dark.phone { background-image: url('~img/icon/dataview/relation/dark/phone.svg'); }
+.icon.relation.c-title { background-image: url('~img/icon/dataview/relation/title.svg'); }
+.icon.relation.c-description { background-image: url('~img/icon/dataview/relation/description.svg'); }
+.icon.relation.c-number { background-image: url('~img/icon/dataview/relation/number.svg'); }
+.icon.relation.c-date { background-image: url('~img/icon/dataview/relation/date.svg'); }
+.icon.relation.c-select { background-image: url('~img/icon/dataview/relation/select.svg'); }
+.icon.relation.c-multiselect { background-image: url('~img/icon/dataview/relation/multiselect.svg'); }
+.icon.relation.c-link { background-image: url('~img/icon/dataview/relation/link.svg'); }
+.icon.relation.c-file { background-image: url('~img/icon/dataview/relation/file.svg'); }
+.icon.relation.c-checkbox { background-image: url('~img/icon/dataview/relation/checkbox.svg'); }
+.icon.relation.c-url { background-image: url('~img/icon/dataview/relation/url.svg'); }
+.icon.relation.c-email { background-image: url('~img/icon/dataview/relation/email.svg'); }
+.icon.relation.c-phone { background-image: url('~img/icon/dataview/relation/phone.svg'); }
 
 .icon.view.c0 { background-image: url('~img/icon/dataview/view/grid0.svg'); }
 .icon.view.c1 { background-image: url('~img/icon/dataview/view/list0.svg'); }
