--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -43,13 +43,13 @@
 	
 		.item { 
 			padding: 4px 14px; font-size: 14px; line-height: 20px; letter-spacing: 0.2px; position: relative; cursor: pointer; 
-			transition: all 0.05s ease-in-out; width: 100%;
+			transition: all 0.05s ease-in-out; width: 100%; background: #fff;
 		}
 		.item.dragging { transition: none; box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2); }
 		
 		.item::before {
 			content: ""; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; background: $colorDarkGrey; z-index: 1;
-			opacity: 0; transition: $transitionFast;
+			opacity: 0; transition: $transitionFast; pointer-events: none;
 		}
 		.item.active::before { opacity: 0.15; }
 		
@@ -57,7 +57,7 @@
 			.name { display: inline-block; vertical-align: top; }
 			
 			.icon { width: 20px; height: 20px; margin-right: 6px; vertical-align: top; }
-			.icon.dnd { width: 7px; height: 12px; background-image: url('~img/icon/dnd.svg'); margin-right: 10px; }
+			.icon.dnd { width: 20px; height: 20px; background-image: url('~img/icon/dnd.svg'); margin: 0px; vertical-align: top; cursor: grab; }
 			.icon.delete { 
 				width: 18px; height: 18px; background-size: 10px 10px; background-image: url('~img/icon/menu/delete0.svg'); cursor: pointer;
 				position: absolute; right: 12px; top: 50%; margin: -9px 0px 0px 0px;
