--- a/src/scss/popup/navigation.scss
+++ b/src/scss/popup/navigation.scss
@@ -40,7 +40,7 @@
 		.items { padding: 16px; overflow-x: hidden; overflow-y: auto; }
 		.items {
 			.item { 
-				border-radius: 8px; box-shadow: 0px 0px 0px 1px $colorLightGrey inset; margin-bottom: 8px; padding: 12px 30px 12px 16px; 
+				border-radius: 8px; box-shadow: 0px 0px 0px 1px $colorLightGrey inset; margin-bottom: 8px;
 				cursor: pointer; transition: $transitionFast; position: relative; height: 72px; line-height: 48px;
 			}
 			.item:hover, .item.active { box-shadow: 0px 0px 0px 2px $colorOrange inset; }
@@ -53,6 +53,7 @@
 			.item:last-child { margin: 0px; }
 
 			.item {
+				.inner { padding: 12px 30px 12px 16px;  }
 				.smile { position: absolute; left: 16px; top: 12px; }
 				.info { 
 					padding: 0px 8px 0px 56px; display: inline-block; vertical-align: middle; width: 100%; 
