--- a/src/scss/debug.scss
+++ b/src/scss/debug.scss
@@ -38,11 +38,13 @@ html.debug {
 			}
 		}
 
+		/*
 		.block.blockText.code {
 			.select { background-color: rgba(0,0,255,0.1); }
 			.wrap { background-color: rgba(0,0,255,0.1); }
 		}
 		.block.blockText.code > .wrapContent > .selectable > .dropTarget { background-color: rgba(0,0,255,0.1); }
+		*/
 	}
 	
 	.blockLast { background: rgba(0,0,255,0.1); }
